[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "auditguard-context-mcp"
version = "0.1.0"
description = "MCP server serving AuditGuard security contexts to AI agents"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "httpx",
    "tomli-w",
]

[project.scripts]
auditguard-context-mcp = "auditguard_context_mcp.server:main"
auditguard-context      = "auditguard_context_mcp.cli:main"

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
