[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rifteo-context-mcp"
version = "1.0.2"
description = "MCP server serving Rifteo security contexts to AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "httpx",
    "tomli-w",
]

[project.scripts]
rifteo-context-mcp = "rifteo_context_mcp.server:main"
rifteo-context      = "rifteo_context_mcp.cli:main"

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
